<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- KEYS -->
    <string name="SAVED_NOTIFICATION_VOLUME">SAVED_NOTIFICATION_VOLUME</string>
    <string name="PLAYER_SELECTED">PLAYER_SELECTED</string>
    <string name="FIRST_LAUNCH">FIRST_LAUNCH</string>
    <string name="DEFAULT_PLAYER_SELECTED">DEFAULT_PLAYER_SELECTED</string>
     <string name="DEFAULT_PLAYER_PACKAGE_NAME">DEFAULT_PLAYER_PACKAGE_NAME</string>
    <string name="APP_PACKAGE_NAME">APP_PACKAGE_NAME</string>
    <string name="APP_FULL_NAME">APP_FULL_NAME</string>
    <string name="START_SONR_ACTIVITY">START_SONR_ACTIVITY</string>
    <!-- KEYS -->

	<!-- PANDORA & WINAMP MARKET URIs -->
	<string name="PANDORA_PKG">market://details?id=com.pandora.android</string>
   <string name="WINAMP_PKG">market://details?id=com.nullsoft.winamp</string>
    <!-- PANDORA & WINAMP MARKET URIs -->
	
    <string name="app_name">SONR Beta</string>
    <string name="empty_list_msg">No Applications</string>
    <string name="notificationText">Show SONR Menu</string>
    <string name="tickerText">SONR Connected</string>
    <string name="DOCK_NOT_FOUND">DOCK NOT FOUND</string>
    <string name="PLAY_PAUSE">Play-Pause</string>
    <string name="DOCK_FOUND">DOCK FOUND</string>
    <string name="DEFAULT_MEDIA_PLAYER_FOUND">DEFAULT MEDIA PLAYER FOUND</string>
    <string name="NO_DEFAULT_MEDIA_PLAYER">NO DEFAULT MEDIA PLAYER</string>
    <string name="DOCK_NOT_FOUND_TRY_AGAIN">Dock not detected, check connections and try again</string>
    <string name="SAMPLE_URI">\\</string>
    <string name="AUDIO_MIME_TYPE">audio/*</string>
    <string name="SELECT_PLAYER">Please select a music player</string>
    <string name="widget_name">SONR</string>
    <string name="connectingToSonrDock">Searching for SONR Dock…</string>
    <string name="service_name">ToggleHeadsetService</string>
    <string name="crash_toast_text">There was a crash. Sending Report…</string>
    <string name="pick_music_app">Which music app would you like to launch?</string>
    <string name="default_player_msg">Your default app for\nyour sound dock:</string>
    <string name="featured_title">Featured Music App: Pandora</string>
    <string name="featured_desc">Your own FREE personalized radio. Start with the name of one of your favorite artists or songs and Pandora will create a \"station\" that plays their music and more music like it.</string>
    <string name="home_text">This app connects your Android dock to your favorite music apps and streaming services. 
		You can control almost any music app from across the room with the AcoustiX remote control.
		\n\nClick "OK" below to agree to our terms of service and privacy policy and to start enjoying great music.</string>
    <string name="t_o_s">SONR End User License Agreement (EULA)
\n\nSONR Labs, Inc. (\"The Company\") provides this SONR application (\"Application\") to you subject to the following terms and conditions (\"Terms and Conditions\") in this End User License Agreement (\"EULA\").  By downloading Application, installing or using Application or any portion thereof, you agree to these Terms and Conditions.
\n\n1. USE OF APPLICATION
\na. The Company grants you the non-exclusive, non-transferable, limited right and license to install and use this Application solely and exclusively for your personal use.
\nb. You may not use the Application in any manner that could damage, disable, overburden, or impair the Application (or servers or networks connected to the Application), nor may you use the Application in any manner that could interfere with any other party\'s use and enjoyment of the Application (or servers or networks connected to the Application).
\nc. You agree that you are solely responsible for (and that The Company has no responsibility to you or to any third party for) your use of the Application, any breach of your obligations under the Terms and Conditions, and for the consequences (including any loss or damage which The Company may suffer) of any such breach.
\n2. PROPRIETARY RIGHTS
\nYou acknowledge that (a) the Application contains proprietary and confidential information that is protected by applicable intellectual property and other laws, and (b) The Company and/or third parties own all right, title and interest in and to the Application and content, excluding content provided by you, that may be presented or accessed through the Application, including without limitation all Intellectual Property Rights therein and thereto. \"Intellectual Property Rights\" means any and all rights existing from time to time under patent law, copyright law, trade secret law, trademark law, unfair competition law, and any and all other proprietary rights, and any and all applications, renewals, extensions and restorations thereof, now or hereafter in force and effect worldwide. You agree that you will not, and will not allow any third party to, (i) copy, sell, license, distribute, transfer, modify, adapt, translate, prepare derivative works from, decompile, reverse engineer, disassemble or otherwise attempt to derive source code from the Application or content that may be presented or accessed through the Application for any purpose, unless otherwise permitted, (ii) take any action to circumvent or defeat the security or content usage rules provided, deployed or enforced by any functionality (including without limitation digital rights management functionality) contained in the Application, (iii) use the Application to access, copy, transfer, transcode or retransmit content in violation of any law or third party rights, or (iv) remove, obscure, or alter The Company\'s or any third party’s copyright notices, trademarks, or other proprietary rights notices affixed to or contained within or accessed in conjunction with or through the Application.
\n3. THE COMPANY TERMS OF SERVICE AND PRIVACY POLICY
\na. The Company\'s privacy policy (located at _______) explains how The Company treats your information and protects your privacy when you use the Application (\“Privacy Policy\”). You agree to the use of your data in accordance with the Privacy Policy.
\nb. The Application may contain features that are used in conjunction with The Company\'s search and other services. Accordingly, your use of such features of the Application is also governed by The Company\'s Terms of Service located at ______________ The Company\'s Privacy Policy located at _________________ as well as any applicable The Company Service-specific Terms of Service and Privacy Policy, which may be updated from time to time and without notice.
\n4. EXPORT RESTRICTIONS
\nThe Application may be subject to export controls or restrictions by the United States or other countries or territories. You agree to comply with all applicable U.S. and international export laws and regulations. These laws include restrictions on destinations, end users, and end use.
\n5. TERMINATION
\nThese Terms and Conditions will continue to apply until terminated by either you or The Company as set forth below. You may terminate these Terms and Conditions at any time by permanently deleting the Application from your mobile device in its entirety. Your rights automatically and immediately terminate without notice from The Company or any Third Party if you fail to comply with any provision of these Terms and Conditions. In such event, you must immediately delete the Application.
\n6. INDEMNITY
\nTo the maximum extent permitted by law, you agree to defend, indemnify and hold harmless The Company, its affiliates and their respective directors, officers, employees and agents from and against any and all claims, actions, suits or proceedings, as well as any and all losses, liabilities, damages, costs and expenses (including reasonable attorneys fees) arising out of or accruing from your use of the Application, including your downloading, installation, or use of the Application, or your violation of these Terms and Conditions.
\n7. DISCLAIMER OF WARRANTIES
\na. YOU EXPRESSLY UNDERSTAND AND AGREE THAT YOUR USE OF THE APPLICATION IS AT YOUR SOLE DISCRETION AND RISK AND THAT THE APPLICATION IS PROVIDED AS IS AND AS AVAILABLE WITHOUT WARRANTY OF ANY KIND.
\nb. YOU ARE SOLELY RESPONSIBLE FOR ANY DAMAGE TO YOUR MOBILE DEVICE, OR OTHER DEVICE, OR LOSS OF DATA THAT RESULTS FROM SUCH USE.
\nc. THE COMPANY FURTHER EXPRESSLY DISCLAIMS ALL WARRANTIES AND CONDITIONS OF ANY KIND, WHETHER EXPRESS OR IMPLIED, INCLUDING, BUT NOT LIMITED TO THE IMPLIED WARRANTIES AND CONDITIONS OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NON-INFRINGEMENT, WITH RESPECT TO THE APPLICATION.
\nd. THE APPLICATION IS NOT INTENDED FOR USE IN THE OPERATION OF NUCLEAR FACILITIES, LIFE SUPPORT SYSTEMS, EMERGENCY COMMUNICATIONS, AIRCRAFT NAVIGATION OR COMMUNICATION SYSTEMS, AIR TRAFFIC CONTROL SYSTEMS, OR ANY OTHER ACTIVITIES IN WHICH THE FAILURE OF THE APPLICATION COULD LEAD TO DEATH, PERSONAL INJURY, OR SEVERE PHYSICAL OR ENVIRONMENTAL DAMAGE.
\n8. LIMITATION OF LIABILITY
YOU EXPRESSLY UNDERSTAND AND AGREE THAT THE COMPANY, ITS SUBSIDIARIES AND AFFILIATES, AND ITS LICENSORS ARE NOT LIABLE TO YOU UNDER ANY THEORY OF LIABILITY FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL CONSEQUENTIAL OR EXEMPLARY DAMAGES THAT MAY BE INCURRED BY YOU THROUGH YOUR USE OF THE APPLICATION, INCLUDING ANY LOSS OF DATA OR DAMAGE TO YOUR MOBILE DEVICE, WHETHER OR NOT THE COMPANY OR ITS REPRESENTATIVES HAVE BEEN ADVISED OF OR SHOULD HAVE BEEN AWARE OF THE POSSIBILITY OF ANY SUCH LOSSES ARISING.
\n9. MISCELLANEOUS
\na. These Terms and Conditions constitute the entire Agreement between you and The Company relating to the Application and govern your use of the Application, and completely replace any prior or contemporaneous agreements between you and The Company regarding the Application.
\nb. The failure of The Company to exercise or enforce any right or provision of these Terms and Conditions does not constitute a waiver of such right or provision, which will still be available to The Company.
\nc. If any court of law, having the jurisdiction to decide on this matter, rules that any provision of these Terms and Conditions is invalid, then that provision will be removed from the Terms and Conditions without affecting the rest of the Terms and Conditions. The remaining provisions of these Terms and Conditions will continue to be valid and enforceable.
\nd. The rights granted in these Terms and Conditions may not be assigned or transferred by either you or The Company without the prior written approval of the other party. Neither you nor The Company are permitted to delegate their responsibilities or obligations under these Terms and Conditions without the prior written approval of the other party.
\ne. These Terms and Conditions and your relationship with The Company under these Terms and Conditions will be governed by the laws of the State of California without regard to its conflict of laws provisions. You and The Company agree to submit to the exclusive jurisdiction of the courts located within the county of San Francisco, California to resolve any legal matter arising from these Terms and Conditions. Notwithstanding this, you agree that The Company will still be allowed to apply for injunctive remedies (or an equivalent type of urgent legal relief) in any jurisdiction</string>
    <string name="disagree">Disagree</string>
    <string name="agree">Agree</string>
	<string name="OK">OK</string>
	<string name="NONE">None</string>
	
</resources>