<?xml version="1.0" encoding="utf-8"?>
 
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	android:layout_width="fill_parent" 
  	android:layout_height="fill_parent"
  	android:orientation="vertical"
  	android:weightSum="1.0" >
  		
    <ImageView android:id="@+id/img_splash_logo"
		android:src="@drawable/splash_logo"
		android:adjustViewBounds="true"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_weight=".45"/>
		  
	<ImageView android:id="@+id/ing_sonr_logo"
		android:src="@drawable/sonr_logo"
		android:adjustViewBounds="true"
		android:layout_width="132dip"
		android:layout_height="64dip"
		android:layout_weight=".05"
		android:layout_gravity="center"/>
  	
  	
   	<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:stretchColumns="1"
    	android:layout_weight=".1"
    	android:layout_marginLeft="12dip"
    	android:layout_marginRight="12dip">
    	
  		<TableRow
  			android:layout_height="wrap_content"
  			android:layout_width="fill_parent">
 			
  			<TextView android:id="@+id/text_default_player"
	     		android:layout_width="fill_parent"
	     		android:text="@string/default_player_msg"
	     		android:layout_height="wrap_content"
	     		android:layout_centerInParent="true"
	     		android:layout_margin="12dip"/>
		    <ImageView android:id="@+id/img_default_app_icon"
		        android:layout_width="@android:dimen/app_icon_size"
		        android:layout_height="@android:dimen/app_icon_size"
		        android:layout_marginLeft="5dip"
		        android:layout_marginRight="11dip"
		        android:layout_gravity="center_vertical"
		        android:scaleType="fitCenter"/>
  		</TableRow>
  		<TableRow
  			android:layout_height="wrap_content"
  			android:layout_width="fill_parent">
  			
	  		<Button android:id="@+id/button_change_settings"
			  		android:text="Change Settings"
			  		android:onClick="buttonChangeSettings"
			 		android:layout_height="wrap_content"
			    	android:layout_width="fill_parent"
			    	android:layout_margin="1dip"/>
	  		<Button android:id="@+id/button_continue"
			  		android:text="Continue"
			  		android:onClick="buttonContinue"
			 		android:layout_height="wrap_content"
			    	android:layout_width="fill_parent"
			    	android:layout_margin="1dip"/>			    	
  		</TableRow>
	</TableLayout>
	
	<LinearLayout
  		android:layout_width="fill_parent" 
  		android:layout_height="wrap_content"
  		android:layout_weight=".4"
  		android:background="#666666"
  		android:layout_marginLeft="12dip"
  		android:layout_marginRight="12dip"
  		android:layout_marginBottom="12dip"
  		android:orientation="vertical">
  		<TextView android:id="@+id/text_featured_title"
	     		android:layout_width="fill_parent"
	     		android:text="@string/featured_title"
	     		android:layout_height="wrap_content"
	     		android:layout_centerInParent="true"
	     		android:layout_margin="12dip"
	     		android:textSize="15sp"/>
	  	<TextView android:id="@+id/text_featured_desc"
	     		android:layout_width="fill_parent"
	     		android:text="@string/featured_desc"
	     		android:layout_height="wrap_content"
	     		android:layout_centerInParent="true"
	     		android:layout_margin="6dip"
	     		android:textSize="10sp"/>
  	</LinearLayout> 
  	
 </LinearLayout>